--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,21 @@ dependencies:
   provider: ^6.1.5
   video_player: ^2.9.5
   flutter_colorpicker: ^1.1.0
+  usb_serial: ^0.5.2
+  permission_handler: ^12.0.1
+  screenshot: ^3.0.0
+  flutter_localization: ^0.3.3
+  intl: ^0.20.2
+  fluttertoast: ^8.2.12
+  path: ^1.9.1
+  file_picker: ^10.3.1
+  flutter_screen_recording: ^2.0.24
+  percent_indicator: ^4.2.5
+  fl_chart: ^1.0.0
+  android_intent_plus: ^5.3.1
+  url_launcher: ^6.3.2
+  # image_gallery_saver: ^2.0.3
+  # gallery_saver: ^2.3.2
 
 dev_dependencies:
   flutter_test:
@@ -81,34 +96,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/app_logo-removebg-preview.png
     - assets/wiespl_indro.mp4
+    - assets/la/ar.json
+    - assets/la/hi.json
+    - assets/la/en.json
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
