--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   android_intent_plus: ^5.3.1
   url_launcher: ^6.3.2
   audioplayers: ^6.5.1
+  camera: ^0.11.2
+  image_picker: ^1.2.0
 
 dev_dependencies:
   flutter_test:
@@ -81,3 +83,5 @@ flutter:
     - assets/audio/Oxygen.mp3
     - assets/audio/VaccumError.mp3
     - assets/audio/NormalAir.mp3
+    - assets/image.png
+    - assets/marcel-scholte-LPurJnihmQI-unsplash.jpg
