--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   audioplayers: ^6.5.1
   camera: ^0.11.2
   image_picker: ^1.2.0
+  slide_digital_clock: ^1.0.3
+  gif_view: ^0.3.1
+  chewie: ^1.13.0
 
 dev_dependencies:
   flutter_test:
