--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   chewie: ^1.13.0
   file_saver: ^0.3.1
   open_filex: ^4.7.0
+  photo_view: ^0.15.0
+  flutter_pdfview: ^1.4.3
 
 dev_dependencies:
   flutter_test:
